# gallifreyan_rs

./: .gitignore  Cargo.toml  Makefile.toml
src/: actions.rs  camera.rs  constraints.rs  event_set.rs  events.rs  image_types.rs  lib.rs  main.rs  math.rs  menu_bar.rs  plugins.rs  selection.rs  sidebar.rs  style.rs  svg.rs  svg_builder.rs  svg_view.rs  text_converter.rs  ui.rs  update_if_changed.rs  utils.rs  world_cursor.rs
src/actions/: reset.rs
src/constraints/: angle.rs  distance.rs
src/image_types/: dot.rs  letter.rs  line_slot.rs  sentence.rs  word.rs
src/image_types/letter/: consonant.rs  vocal.rs
src/math/: angle.rs
src/menu_bar/: file.rs  native.rs  settings.rs  svg_export.rs  view.rs  wasm.rs
src/menu_bar/file/: native.rs  svg_export.rs  wasm.rs
src/menu_bar/settings/: vocal_nesting.rs
src/plugins/: color_theme.rs  constraints.rs  file.rs  interaction.rs  selection.rs  style.rs  svg.rs  svg_view.rs  text_converter.rs  ui.rs
src/plugins/constraints/: angle.rs  distance.rs
src/plugins/file/: native.rs  svg_export.rs  wasm.rs  web.js
src/plugins/svg/: circle.rs  draw.rs  export.rs  group.rs  line.rs  path.rs  style.rs  title.rs
src/plugins/text_converter/: components.rs  systems.rs
src/plugins/text_converter/components/: dot.rs  letter.rs  line_slot.rs  sentence.rs  word.rs
src/plugins/text_converter/components/letter/: consonant.rs  vocal.rs
src/plugins/text_converter/systems/: dot.rs  letter.rs  line_slot.rs  sentence.rs  word.rs
src/plugins/ui/: menu_bar.rs  sidebar.rs  toolbox.rs
src/plugins/ui/menu_bar/: file.rs  settings.rs
src/plugins/ui/menu_bar/settings/: vocal_nesting.rs
src/plugins/ui/sidebar/: selection.rs  text_input.rs  tree.rs
src/plugins/ui/widgets/: angle_slider.rs  tree.rs
src/sidebar/: selection.rs  text_converter.rs  text_input.rs  tree.rs
src/sidebar/text_converter/: dot.rs  letter.rs  line_slot.rs  sentence.rs  word.rs
src/svg/: circle.rs  group.rs  line.rs  path.rs  style.rs  title.rs
src/svg_view/: camera.rs  color.rs  draw.rs  interaction.rs  selection.rs
src/ui/: angle_slider.rs  sidebar.rs  tree.rs
src/utils/: contains.rs  event_set.rs  update_if_changed.rs
tests/: svg.rs
wasm/: index.html  web.js
