[package]
name = "gallifreyan_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy_prototype_lyon = "0.7.0"
bevy_egui = "0.17.1"
regex = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.5"