[package]
name = "gallifreyan_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gallifreyan"
path = "src/main.rs"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
bevy = "0.9.1"
bevy_prototype_lyon = "0.7.0"
bevy_egui = { version = "0.18.0", features = ["immutable_ctx"] }
rfd = "0.10.0"
futures = "0.3.25"
regex = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
strum = "0.24"
strum_macros = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24.5"
winit = "0.27.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"