[package]
name = "gallifreyan_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gallifreyan_lib"
path = "src/lib.rs"

[[bin]]
name = "gallifreyan"
path = "src/main.rs"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_scene",
    "bevy_winit",
    "x11"
]

[dependencies]
bevy_prototype_lyon = "0.8.0"
bevy_egui = { version = "0.20.0", features = ["immutable_ctx"] }
rfd = "0.10.0"
futures = "0.3.25"
regex = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
strum = "0.24"
strum_macros = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24.5"
winit = "0.28.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"